# python_cpp_project_template

./: .gitignore  CMakeLists.txt  environment.yaml~
docker/: Dockerfile  README.md  build_image.sh  run_container.sh
include/: cpp_module_1.hpp
scripts/: README.md  build_debug.sh  build_release.sh  setup_submodule.sh
src/: cpp_module_1.cpp  cpp_module_expose.cpp  main.py
